# lifeform-count

custom_baron_soil_fauna/: README.md  reproduce_annelids.py  reproduce_protists.py
custom_baron_soil_fauna/output/: annelid_biome_biomass.csv  protist_biome_biomass.csv
greenspoon2023_mammal_biomass/: .gitignore  LICENSE.txt  README.md  SI_analysis.ipynb  gen_mass_density_raster.R  generate_map.py  human_and_domesticated_biomass.ipynb  infer_wild_land_mammal_biomass.ipynb  marine_mammal_biomass.ipynb  mass_by_cont.R  plot_results.ipynb  population_reports_from_sources_outside_IUCN.R  preproc_raster_data.R  preprocess_data.ipynb  requirements.txt  setup.py  svr_generic.py
greenspoon2023_mammal_biomass/d3-voronoi-map/: README.md  generate_json.py  requirements.txt  voronoi_data.csv  voronoi_data.json
integrated_biomass/: .gitignore  README.md  pyproject.toml
integrated_biomass/src/integrated_biomass/: __init__.py  _rosenberg_nb_exec.py  adapter_baron.py  adapter_baron_soilfauna.py  adapter_greenspoon.py  adapter_rosenberg.py  adapter_vandenhoogen.py  biomes.py  bootstrap_data.py  conversions.py  model_biomass.py  repro_mammal_biomes.py  repro_rosenberg.py  run.py  schema.py
rosenberg2023_biomass_terrestrial_arthropods/: 01-Main-Estimate_global_biomass_and_numbers.ipynb  02-Arthropods dates.ipynb  04_geographic_sensitivity_analysis.ipynb  05_biome_maps.ipynb  README.rtf  soil_site_data_mass_all.xlsx
vandenhoogen2019_crowther_lab_nematodes/: .gitignore  LICENSE  README.md
visualizer/: .gitignore  README.md  index.html  package-lock.json  package.json
(+116 files in other folders)
