[project]
name = "integrated-biomass"
version = "0.1.0"
description = "Bar-On (2018) global biomass re-run with Rosenberg (2023) terrestrial arthropods and Greenspoon (2023) wild mammals, harmonized onto WWF biomes."
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "openpyxl>=3.1",
    "geopandas>=0.14",
    "shapely>=2.0",
    "fiona>=1.9",
    "pyproj>=3.6",
    "rasterio>=1.3",
    "scikit-learn>=1.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/integrated_biomass"]
